Transaction type = Object Linkedin fetch and default profile creation part of member creation

--- a/views/memberRegistration/authorize.jade
+++ b/views/memberRegistration/authorize.jade
@@ -1,3 +1,4 @@
+title SnT | #{integration.title} | #{formatRole(member.role)} registration
 include ../scriptsAndStyles
     include header
         .container-fluid
