Minor fixes to forgot password page

--- a/views/dashboard/forgotPassword.jade
+++ b/views/dashboard/forgotPassword.jade
@@ -5,20 +5,22 @@ include header
         .col-md-8
             .col-md-4
                 - if (code)
-                    .form-group
-                        label.control-label(for='password') New Password
-                        input.form-control#password(type='password', placeholder='New password', name='password', data-toggle="tooltip", data-placement="bottom")
-                    .form-group
-                        label.control-label(for='username') Confirm New Password
-                        input.form-control#confirm-password(type='password', placeholder='Confirm password', name='confirm-password', data-toggle="tooltip", data-placement="bottom")
-                    .form-group
-                        input.btn.btn-primary#reset-password(type='submit', value='Update Password')
+                    form#reset-password
+                        .form-group
+                            label.control-label(for='password') New Password
+                            input.form-control#password(type='password', placeholder='New password', name='password', data-toggle="tooltip", data-placement="bottom")
+                        .form-group
+                            label.control-label(for='confirm-password') Confirm New Password
+                            input.form-control#confirm_password(type='password', name='confirm_password', placeholder='Confirm password', data-toggle="tooltip", data-placement="bottom")
+                        .form-group
+                            input.btn.btn-primary(type='submit', value='Update Password')
                 - else
-                    .form-group
-                        label.control-label(for='email') Email
-                        input.form-control#email(type='text', placeholder='Email', name='email', data-toggle="tooltip", data-placement="bottom")
-                    .form-group
-                        input.btn.btn-primary#request-new-password(type='submit', value='Reset password')
+                    form#request-new-password
+                        .form-group
+                            label.control-label(for='email') Email
+                            input.form-control#email(type='text', placeholder='Email', name='email', data-toggle="tooltip", data-placement="bottom")
+                        .form-group
+                            input.btn.btn-primary(type='submit', value='Reset password')
         .col-md-2
 script.
     var code = '#{code}';
