--- a/views/callFlow/header.jade
+++ b/views/callFlow/header.jade
@@ -7,6 +7,7 @@ head
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
     link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
+    link(href='/css/style.css', rel='stylesheet')
     script(src='/js/lib/combined.js')
 .masthead(role='banner')
     .container
