--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -276,8 +276,14 @@ block content
                         h4.modal-title Add Skill
                     form#editForm
                         .modal-body
-                            label.control-label(for='add_skill') Skill
-                            input.form-control#skill_name(class='typeahead', type='text', name='skill_name', data-toggle="tooltip", data-placement="bottom", data-provide="typeahead", autocomplete="off")
+                            .row
+                                .form-group.col-md-10
+                                    label.control-label(for='add_skill') Skill
+                            .row
+                                .form-group.col-md-10
+                                    input.form-control#skill_name(class='typeahead', type='text', name='skill_name', data-toggle="tooltip", data-placement="bottom", data-provide="typeahead", autocomplete="off")
+                                .form-group.col-md-2
+                                    img.pull-right#spinningWheel(alt="Loading", src="../../images/spinning_wheel.gif", class = " input form-control", height="42" ,width="42")
                         .modal-footer
                             button.btn.btn-default(data-dismiss='modal') Close
                             input.btn.btn-primary(type='submit', value='Save')
@@ -289,8 +295,14 @@ block content
                         h4.modal-title Edit Skill
                     form
                         .modal-body
-                            label.control-label(for='edit_skill') Skill
-                            input.form-control#skill_name(class='typeahead', type= 'text', name='skill_name', data-toggle="tooltip", data-placement="bottom", data-provide="typeahead", autocomplete="off")
+                            .row
+                                .form-group.col-md-10
+                                    label.control-label(for='edit_skill') Skill
+                            .row
+                                .form-group.col-md-10
+                                    input.form-control#skill_name(class='typeahead', type= 'text', name='skill_name', data-toggle="tooltip", data-placement="bottom", data-provide="typeahead", autocomplete="off")
+                                .form-group.col-md-2
+                                    img.pull-right#spinningWheel(alt="Loading", src="../../images/spinning_wheel.gif", class = " input form-control", height="42" ,width="42" , border="none")
                         .modal-footer
                             button.btn.btn-default(data-dismiss='modal') Close
                             input.btn.btn-primary(type='submit', value='Update')
