Fix in Middleware to show integration users Titles in dashboard pages

--- a/views/dashboard/callDetails.jade
+++ b/views/dashboard/callDetails.jade
@@ -1,5 +1,6 @@
 extends header
 block content
+    title SearchNTalk - Call Details
     .clearfix
     table.table-bordered.table.sortable#users
         thead
