--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -1,6 +1,7 @@
 title User Management - #{integration.title}
 extends header
 block content
+    title SearchNTalk - Network Members
     .navbar.navbar-default
         .container
             a.navbar-brand(href=DashboardUrls.index()) Back
