--- a/views/dashboard/mobileVerification.jade
+++ b/views/dashboard/mobileVerification.jade
@@ -1,6 +1,6 @@
 include ../scriptsAndStyles
 extends  ../contextualHeader
-
+title SearchNTalk - Mobile Verification
 block content
     include ../errorMessage
     p Please verify your mobile number
